Changed header width to show correctly on mobile

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -610,7 +610,7 @@ label.margin-toggle:not(.sidenote-number) {
 
 header > nav.group,
 body footer {
-  width: 60%;
+  width: 70%;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
